--- a/CALCULATOR/index.html
+++ b/CALCULATOR/index.html
@@ -26,6 +26,7 @@
             <button>5</button>
             <button>6</button>
             <button class="operator">-</button>
+            
         </div>
         <div>
             <button>1</button>
@@ -42,4 +43,4 @@
     </div>
     <script src="script.js"></script>
 </body>
-</html>
+</html> hello 
